fix active-line selection and add proper background for inputs in build settings dark mode

--- a/client/src/main/resources/sass/dark.scss
+++ b/client/src/main/resources/sass/dark.scss
@@ -70,15 +70,28 @@ $code-background-color: #171717;
 .scastie {
   .dark {
     .main-panel {
-      background-color: $cm-background-color; 
+      background-color: $cm-background-color;
+    }
+  }
+
+  .code .cm-s-solarized.cm-s-dark {
+    background-color: $cm-background-color;
+    .editor-wrapper, .cm-gutters {
+      background-color: $cm-background-color;
+    }
+  }
+
+  .configuration .cm-s-solarized.cm-s-dark {
+    background-color: $snippet-background-color;
+
+    .editor-wrapper, .cm-gutters {
+      background-color: $snippet-background-color;
     }
   }
 
   .code, .configuration {
     .cm-s-solarized.cm-s-dark {
       color: $cm-color;
-      background-color: $cm-background-color;
-
       .cm-cursor {
         border-left-color: $cm-cursor;
       }
@@ -87,7 +100,6 @@ $code-background-color: #171717;
       .cm-simplescroll-horizontal div {
         background: $hover-option-color;
       }
-      
       .cm-hints {
         background: $snippet-background-color;
       }
@@ -99,7 +111,6 @@ $code-background-color: #171717;
 
       .cm-gutters {
         border-right: 1px solid $cm-gutters-border-color;
-        background-color: $cm-background-color;
       }
 
       .cm-linenumber {
